--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
-HOST=localhost
-PASSWORD=password
-PORT=3306
-USER=root
-DATABASE=Estudos
+MYSQLHOST=localhost
+MYSQLPASSWORD=password
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQLDATABASE=Estudos
+API_PORT=3001
